2012-02-14  Ingo Renner  <ingo.renner@dkd.de>

	* Changed logging of an invalid Index Queue request to also log the request object and Index Queue header
	* Added tx_solr_indexqueue_Item::getSite()
	* Added initial API for Index Queue Item Indexing Properties
	* Added Polish Translations, credits Jan Slusarczyk

2012-02-13  Ingo Renner  <ingo.renner@dkd.de>

	!!! Removed compatibility for TYPO3 4.3

	* Fixed issue #27578: Remove references to Solr from editor facing UI
	* Changed text alignment of suggestions so that it is forced to be aligned left
	* Added maxHttpHeaderSize="65536" to server.xml to handle longer GET Request to solr. see also  http://serverfault.com/questions/56691/whats-the-maximum-url-length-in-tomcat
	* Added an option to override the URL stored in the index for a page
	* Changed the name of tx_solr_ConnectionManager::getSiteLanguages() to getSystemLanguages()
	* Added method tx_solr_Site::getLanguages()
	* Added an own implementation for making HTTP requests in tx_solr_indexqueue_PageIndexerRequest to provide better error handling/detection
	* Added tx_solr_Query::setOperator()
	* Fixed issue #30922: PHP Error in Used Facet Renderer
	* Added a check in the install script whether the download mirror can be contacted
	* Fixed an PHP warning due to a missing check whether a given URL parameter is an array when generation a facet reset URL
	* Added the Index Inspector
	* Removed backwardscompatibility for results.highlighting use search.resultsHighlighting instead
	* Added log data to page index logging
	* Added more details when logging page indexing

2012-02-10  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #30577: IMAGE and (likely) IMG_RESOURCE do not work in Index Queue mapping, credits Rik Willems

2012-02-02  Ingo Renner  <ingo.renner@dkd.de>

	! Resolved an XSS security issue

	* Updated schema and solrconfig

2012-01-27  Ingo Renner  <ingo.renner@dkd.de>
