@@ -1,5 +1,6 @@
 2012-02-14  Ingo Renner  <ingo.renner@dkd.de>
 
+	* Changed logging of failed Index Queue page indexer requests to also log when invalid json was returned
 	* Changed logging of an invalid Index Queue request to also log the request object and Index Queue header
 	* Added tx_solr_indexqueue_Item::getSite()
 	* Added initial API for Index Queue Item Indexing Properties
